welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:-6: error: Missing closing brace `}' assumed here
try {
^lessBy10:1: error: expected class or object definition
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
^